아로마 자동입력 삭제, 유형(배치, 년도) 수정